fixed overflow_hidden on iphone (hope)

--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body, html {
     overflow-x: hidden; 
     overflow-y: hidden;
     cursor: url(trump.cur), auto;
+    position: relative;
+    height: 100%;
+}
+
+.all-content {
+    position: relative;
+    overflow: hidden;
 }
 
 .body-background {
